--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Huayu Bangladesh | Learn Chinese</title>
+    <title>Masud Language Lab</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
